--- a/index.html
+++ b/index.html
@@ -23,31 +23,25 @@
       <li class="active"><a href="">Home</a></li>
       <li><a href="">About Us</a></li>
       <li><a href="">Our Services</a></li>
-      <li class="accent"><a href="">Get In Touch</a></li>
+      <li><a href="" class="accent">Get In Touch</a></li>
     </ul>
   </nav>
 
   <main>
     <div>
       <h1>
-        <span>Genuine</span><span>islanders</span><span>providing</span>
-        <div>
-          <ul>
-            <li><a href="">Instagram Shit</a></li>
-            <li><a href="">Facebook Shit</a></li>
-            <li><a href="">YouTube Shit</a></li>
-            <li><a href="">Twitter Shit</a></li>
-            <li><a href="">All the Blockchain</a></li>
-          </ul>
-        </div>&nbsp;
-        <span>to</span><span>genuine</span><span>island</span><span>busineses.</span>
+          <strong>We</strong> help your business succeed by utilizing modern marketing tools to <strong>grow your customer base.</strong><br />
+          <br />
+          <strong>We</strong> care about Vancouver Island and it's local businesses because <strong>we're islanders too</strong> and we believe that <strong>we're all in this together.</strong><br />
+          <br />
+          <strong>We are Island Social.</strong>
       </h1>
-      <p>Get in touch with us if you want to optimize your shit chumps. Believe me when I tell you we could make ypu ALL the skrillz. You want $1,000,000?? You get $1,000,000. But only if you roll with us.</p>
+      <a href="" class="accent xl">Get in Touch</a>
     </div>
     <div>
-      <button>
-        Get in Touch
-      </button>
+        <div class='embed-container'>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/nPhe9Ah8rKA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
     </div>
   </main>
 
